[gd_scene load_steps=3 format=2]

[ext_resource path="res://common/network/SyncDict.gd" type="Script" id=1]
[ext_resource path="res://shared/all/state/ControllerState.gd" type="Script" id=2]

[node name="ControllerState" type="Node"]
script = ExtResource( 2 )

[node name="HalfStep" type="Node" parent="."]
script = ExtResource( 1 )
throttle_msec = 250
[connection signal="values_changed" from="HalfStep" to="." method="_on_HalfStep_values_changed"]
